--- a/Lab work 2.2.ipynb
+++ b/Lab work 2.2.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 77,
    "metadata": {
     "scrolled": true
    },
@@ -270,15 +270,50 @@
     "Більш за все на світі любив дід сонце. Він прожив під сонцем коло ста літ, ніколи не ховаючись у холодок. Так під сонцем на погребні, коло яблуні, він і помер, коли прийшов його час.\n",
     "\n",
     "Дід любив кашляти. Кашляв він часом так довго й гучно, що скільки ми не старалися, ніхто не міг його як слід передражнити. Його кашель чув увесь куток. Старі люди по дідовому кашлю вгадували навіть погоду.\n",
-    "\"\"\"\n"
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Количество слов в тексте: 538\n",
+      "Количество уникальнх слов в тексте: 434\n",
+      "0=е место: ('дід', 17)\n",
+      "1=е место: ('ста', 9)\n",
+      "2=е место: ('був', 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import string\n",
+    "\n",
+    "punkt = list(string.punctuation)\n",
+    "for sign in punkt:\n",
+    "    text = text.replace(sign, '') # строка без знаков препинания\n",
+    "text = text.replace('—', '')\n",
+    "\n",
+    "text2 = ([w for w in text.split() if len(w) >= 3]) # список слов длиной больше или равно 3\n",
+    "\n",
+    "print('Количество слов в тексте:', len(text2))\n",
+    "print('Количество уникальнх слов в тексте:', len(set(text2)))  \n",
+    "    \n",
+    "uniq_dict = {} # пустой словарь уникальных слов\n",
+    "for word in text2:\n",
+    "    count_uniq = text.count(word) #считаю, сколько раз слово повторяется в тексте\n",
+    "    uniq_dict[word] = count_uniq #записываю в словарь по ключу. Ключ - проверяемое слово\n",
+    "\n",
+    "sort_uniq_dict = sorted(uniq_dict.items(), key=lambda x: x[1], reverse=True) #отсортированный список кортежей словаря уникальных слов uniq_dict\n",
+    "\n",
+    "for i in range(3):\n",
+    "    print(f'{i}=е место: {sort_uniq_dict[i]}') #вывод первых трех элементов\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -303,17 +338,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Максимальное значение: 100\n",
+      "Минимальное значение: 0\n",
+      "Среднее арифметическое: 50.611\n",
+      "Медиана: 75.0\n",
+      "Частота цифр в последовательности:\n",
+      "(63, 7)\n",
+      "(48, 13)\n",
+      "(69, 12)\n",
+      "(25, 14)\n",
+      "(18, 14)\n",
+      "(4, 10)\n",
+      "(59, 6)\n",
+      "(29, 15)\n",
+      "(78, 18)\n",
+      "(10, 7)\n",
+      "(91, 11)\n",
+      "(5, 10)\n",
+      "(47, 8)\n",
+      "(34, 18)\n",
+      "(51, 9)\n",
+      "(13, 20)\n",
+      "(55, 6)\n",
+      "(64, 11)\n",
+      "(53, 6)\n",
+      "(2, 7)\n",
+      "(9, 13)\n",
+      "(43, 8)\n",
+      "(26, 8)\n",
+      "(30, 10)\n",
+      "(98, 9)\n",
+      "(93, 10)\n",
+      "(54, 10)\n",
+      "(32, 9)\n",
+      "(67, 16)\n",
+      "(76, 3)\n",
+      "(16, 7)\n",
+      "(57, 9)\n",
+      "(46, 8)\n",
+      "(1, 8)\n",
+      "(85, 14)\n",
+      "(65, 13)\n",
+      "(90, 13)\n",
+      "(72, 10)\n",
+      "(95, 7)\n",
+      "(50, 10)\n",
+      "(100, 10)\n",
+      "(38, 12)\n",
+      "(12, 9)\n",
+      "(20, 15)\n",
+      "(45, 14)\n",
+      "(49, 7)\n",
+      "(82, 15)\n",
+      "(62, 11)\n",
+      "(35, 8)\n",
+      "(27, 10)\n",
+      "(94, 9)\n",
+      "(15, 4)\n",
+      "(24, 12)\n",
+      "(14, 13)\n",
+      "(86, 15)\n",
+      "(40, 14)\n",
+      "(0, 10)\n",
+      "(41, 10)\n",
+      "(99, 11)\n",
+      "(96, 5)\n",
+      "(74, 11)\n",
+      "(88, 11)\n",
+      "(60, 8)\n",
+      "(39, 5)\n",
+      "(71, 10)\n",
+      "(66, 12)\n",
+      "(79, 10)\n",
+      "(31, 11)\n",
+      "(83, 10)\n",
+      "(33, 11)\n",
+      "(92, 11)\n",
+      "(17, 9)\n",
+      "(97, 12)\n",
+      "(52, 7)\n",
+      "(70, 15)\n",
+      "(22, 8)\n",
+      "(81, 13)\n",
+      "(87, 8)\n",
+      "(58, 10)\n",
+      "(19, 7)\n",
+      "(89, 8)\n",
+      "(37, 7)\n",
+      "(28, 11)\n",
+      "(61, 8)\n",
+      "(3, 10)\n",
+      "(84, 13)\n",
+      "(36, 8)\n",
+      "(44, 14)\n",
+      "(6, 9)\n",
+      "(56, 9)\n",
+      "(75, 7)\n",
+      "(7, 9)\n",
+      "(8, 10)\n",
+      "(21, 6)\n",
+      "(23, 6)\n",
+      "(80, 6)\n",
+      "(77, 7)\n",
+      "(68, 3)\n",
+      "(73, 10)\n",
+      "(11, 3)\n",
+      "(42, 6)\n",
+      "Среднеквадратичное отклонение: 29.154891167692604\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
+    "import math\n",
+    "from functools import reduce\n",
     "\n",
     "#генеруэмо тисячу чисел в діапазоні від 0 до 10\n",
     "list_with_random_numbers = [random.randint(0,100) for i in range(1000)]\n",
     "\n",
-    "                    "
+    "max_val = reduce(max, list_with_random_numbers)\n",
+    "print('Максимальное значение:', max_val)\n",
+    "\n",
+    "min_val = reduce(min, list_with_random_numbers)\n",
+    "print('Минимальное значение:', min_val)\n",
+    "\n",
+    "middle_sum = sum(list_with_random_numbers) / len(list_with_random_numbers)\n",
+    "print('Среднее арифметическое:', middle_sum)\n",
+    "\n",
+    "if len(list_with_random_numbers) % 2 == 0:\n",
+    "    ind1 = len(list_with_random_numbers) // 2 - 1\n",
+    "    ind2 = len(list_with_random_numbers) // 2 + 1\n",
+    "    mediana = (list_with_random_numbers[ind1] + list_with_random_numbers[ind2]) / 2\n",
+    "else:\n",
+    "    ind = len(list_with_random_numbers) / 2\n",
+    "    mediana = list_with_random_numbers[ind1]\n",
+    "    \n",
+    "print('Медиана:', mediana)\n",
+    "\n",
+    "dict_with_numbers = {}\n",
+    "for el in list_with_random_numbers:\n",
+    "    count_el = list_with_random_numbers.count(el)\n",
+    "    dict_with_numbers[el] = count_el\n",
+    "print('Частота цифр в последовательности:', *dict_with_numbers.items(), sep='\\n')\n",
+    "\n",
+    "tmp = sum((i-middle_sum)**2 for i in list_with_random_numbers) / len(list_with_random_numbers)\n",
+    "st_dev = math.sqrt(tmp)\n",
+    "print('Среднеквадратичное отклонение:', st_dev)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
